@@ -1,3 +1,12 @@
+2007-02-06  David Smith  <catfish.man@gmail.com>
+
+        Reviewed by Darin.
+
+        Patch for http://bugs.webkit.org/show_bug.cgi?id=12566
+        [Drosera] Console history fixups
+
+        * Drosera/console.js: assorted cleanups and fixes
+
 2007-02-05  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler.
